Api to get weatherforecast

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 logging.level.com.ordermgmt = DEBUG
+openmap.url=http://api.openweathermap.org/data/2.5/forecast
+app.id=4c2e0f9b2de555cca8ef19d287efdf37
